--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,7 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-        manifestPlaceholders = [onesignal_app_id: "643ce42f-8baf-41f7-b158-a11beecb8c85",
+        manifestPlaceholders = [onesignal_app_id               : "643ce42f-8baf-41f7-b158-a11beecb8c85",
                                 // Project number pulled from dashboard, local value is ignored.
                                 onesignal_google_project_number: "REMOTE"]
     }
@@ -40,10 +40,10 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.google.android.gms:play-services-gcm:11.0.1'
     compile 'com.google.android.gms:play-services-location:11.0.1'
-    compile 'com.android.support:appcompat-v7:25.3.+'
-    compile 'com.android.support:customtabs:25.3.+'
+    compile 'com.android.support:customtabs:25.3.1'
     testCompile 'junit:junit:4.12'
 }
+
 
 
 
