--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     compile 'com.google.android.gms:play-services-gcm:11.0.1'
     compile 'com.google.android.gms:play-services-location:11.0.1'
     compile 'com.android.support:customtabs:25.3.1'
+    compile files('libs/jxl-2.6.12.jar')
     testCompile 'junit:junit:4.12'
 }
 
